--- a/README
+++ b/README
@@ -2,8 +2,8 @@ This folder contains files for building osm_plugin for gazebo simulator.
 
 Dependencies:
 	Python 2.x
-	Python package: osmapi
-	(installation: pip install osmapi)
+	Python packages: elementtree, osmapi
+	(installation: pip install elementtree osmapi)
 
 Files:
 osm2dict.py
